OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/display.h


double D_get_a_west(void);

double D_get_a_east(void);

double D_get_a_north(void);

double D_get_a_south(void);

double D_get_d_west(void);

double D_get_d_east(void);

double D_get_d_north(void);

double D_get_d_south(void);

double D_u_to_a_row(double);

double D_u_to_a_col(double);

double D_a_to_d_row(double);

double D_a_to_d_col(double);

double D_u_to_d_row(double);

double D_u_to_d_col(double);

double D_d_to_u_row(double);

double D_d_to_u_col(double);

double D_d_to_a_row(double);

double D_d_to_a_col(double);

double D_get_ns_resolution(void);

double D_get_ew_resolution(void);

void D_get_u(double[2][2]);

void D_get_a(int[2][2]);

void D_get_d(int[2][2]);


/* color_list.c */
char *D_color_list(void);


/* draw.c */
int D_set_clip_window(int, int, int, int);

int D_set_clip_window_to_map_window(void);

int D_set_clip_window_to_screen_window(void);

int D_cont_abs(int, int);

int D_cont_rel(int, int);

int D_move_abs(int, int);

int D_move_rel(int, int);


/* draw2.c */
void D_set_clip(double, double, double, double);

void D_clip_to_map(void);

void D_move_clip(double, double);

int D_cont_clip(double, double);

void D_polydots_clip(const double *, const double *, int);

void D_polyline_cull(const double *, const double *, int);