invest/OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/display.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 16
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_a_west'):
    D_get_a_west = _libs['grass_display.6.4.2RC2'].D_get_a_west
    D_get_a_west.restype = c_double
    D_get_a_west.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 17
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_a_east'):
    D_get_a_east = _libs['grass_display.6.4.2RC2'].D_get_a_east
    D_get_a_east.restype = c_double
    D_get_a_east.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 18
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_a_north'):
    D_get_a_north = _libs['grass_display.6.4.2RC2'].D_get_a_north
    D_get_a_north.restype = c_double
    D_get_a_north.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 19
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_a_south'):
    D_get_a_south = _libs['grass_display.6.4.2RC2'].D_get_a_south
    D_get_a_south.restype = c_double
    D_get_a_south.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 20
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_d_west'):
    D_get_d_west = _libs['grass_display.6.4.2RC2'].D_get_d_west
    D_get_d_west.restype = c_double
    D_get_d_west.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 21
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_d_east'):
    D_get_d_east = _libs['grass_display.6.4.2RC2'].D_get_d_east
    D_get_d_east.restype = c_double
    D_get_d_east.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 22
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_d_north'):
    D_get_d_north = _libs['grass_display.6.4.2RC2'].D_get_d_north
    D_get_d_north.restype = c_double
    D_get_d_north.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 23
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_d_south'):
    D_get_d_south = _libs['grass_display.6.4.2RC2'].D_get_d_south
    D_get_d_south.restype = c_double
    D_get_d_south.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 24
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_u_to_a_row'):
    D_u_to_a_row = _libs['grass_display.6.4.2RC2'].D_u_to_a_row
    D_u_to_a_row.restype = c_double
    D_u_to_a_row.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 25
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_u_to_a_col'):
    D_u_to_a_col = _libs['grass_display.6.4.2RC2'].D_u_to_a_col
    D_u_to_a_col.restype = c_double
    D_u_to_a_col.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 26
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_a_to_d_row'):
    D_a_to_d_row = _libs['grass_display.6.4.2RC2'].D_a_to_d_row
    D_a_to_d_row.restype = c_double
    D_a_to_d_row.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 27
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_a_to_d_col'):
    D_a_to_d_col = _libs['grass_display.6.4.2RC2'].D_a_to_d_col
    D_a_to_d_col.restype = c_double
    D_a_to_d_col.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 28
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_u_to_d_row'):
    D_u_to_d_row = _libs['grass_display.6.4.2RC2'].D_u_to_d_row
    D_u_to_d_row.restype = c_double
    D_u_to_d_row.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 29
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_u_to_d_col'):
    D_u_to_d_col = _libs['grass_display.6.4.2RC2'].D_u_to_d_col
    D_u_to_d_col.restype = c_double
    D_u_to_d_col.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 30
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_d_to_u_row'):
    D_d_to_u_row = _libs['grass_display.6.4.2RC2'].D_d_to_u_row
    D_d_to_u_row.restype = c_double
    D_d_to_u_row.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 31
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_d_to_u_col'):
    D_d_to_u_col = _libs['grass_display.6.4.2RC2'].D_d_to_u_col
    D_d_to_u_col.restype = c_double
    D_d_to_u_col.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 32
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_d_to_a_row'):
    D_d_to_a_row = _libs['grass_display.6.4.2RC2'].D_d_to_a_row
    D_d_to_a_row.restype = c_double
    D_d_to_a_row.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 33
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_d_to_a_col'):
    D_d_to_a_col = _libs['grass_display.6.4.2RC2'].D_d_to_a_col
    D_d_to_a_col.restype = c_double
    D_d_to_a_col.argtypes = [c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 34
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_ns_resolution'):
    D_get_ns_resolution = _libs['grass_display.6.4.2RC2'].D_get_ns_resolution
    D_get_ns_resolution.restype = c_double
    D_get_ns_resolution.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 35
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_ew_resolution'):
    D_get_ew_resolution = _libs['grass_display.6.4.2RC2'].D_get_ew_resolution
    D_get_ew_resolution.restype = c_double
    D_get_ew_resolution.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 36
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_u'):
    D_get_u = _libs['grass_display.6.4.2RC2'].D_get_u
    D_get_u.restype = None
    D_get_u.argtypes = [(c_double * 2) * 2]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 37
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_a'):
    D_get_a = _libs['grass_display.6.4.2RC2'].D_get_a
    D_get_a.restype = None
    D_get_a.argtypes = [(c_int * 2) * 2]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 38
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_get_d'):
    D_get_d = _libs['grass_display.6.4.2RC2'].D_get_d
    D_get_d.restype = None
    D_get_d.argtypes = [(c_int * 2) * 2]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 41
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_color_list'):
    D_color_list = _libs['grass_display.6.4.2RC2'].D_color_list
    D_color_list.restype = ReturnString
    D_color_list.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 44
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_clip_window'):
    D_set_clip_window = _libs['grass_display.6.4.2RC2'].D_set_clip_window
    D_set_clip_window.restype = c_int
    D_set_clip_window.argtypes = [c_int, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 45
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_clip_window_to_map_window'):
    D_set_clip_window_to_map_window = _libs['grass_display.6.4.2RC2'].D_set_clip_window_to_map_window
    D_set_clip_window_to_map_window.restype = c_int
    D_set_clip_window_to_map_window.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 46
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_clip_window_to_screen_window'):
    D_set_clip_window_to_screen_window = _libs['grass_display.6.4.2RC2'].D_set_clip_window_to_screen_window
    D_set_clip_window_to_screen_window.restype = c_int
    D_set_clip_window_to_screen_window.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 47
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_cont_abs'):
    D_cont_abs = _libs['grass_display.6.4.2RC2'].D_cont_abs
    D_cont_abs.restype = c_int
    D_cont_abs.argtypes = [c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 48
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_cont_rel'):
    D_cont_rel = _libs['grass_display.6.4.2RC2'].D_cont_rel
    D_cont_rel.restype = c_int
    D_cont_rel.argtypes = [c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 49
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_move_abs'):
    D_move_abs = _libs['grass_display.6.4.2RC2'].D_move_abs
    D_move_abs.restype = c_int
    D_move_abs.argtypes = [c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 50
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_move_rel'):
    D_move_rel = _libs['grass_display.6.4.2RC2'].D_move_rel
    D_move_rel.restype = c_int
    D_move_rel.argtypes = [c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 53
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_set_clip'):
    D_set_clip = _libs['grass_display.6.4.2RC2'].D_set_clip
    D_set_clip.restype = None
    D_set_clip.argtypes = [c_double, c_double, c_double, c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 54
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_clip_to_map'):
    D_clip_to_map = _libs['grass_display.6.4.2RC2'].D_clip_to_map
    D_clip_to_map.restype = None
    D_clip_to_map.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 55
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_move_clip'):
    D_move_clip = _libs['grass_display.6.4.2RC2'].D_move_clip
    D_move_clip.restype = None
    D_move_clip.argtypes = [c_double, c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 56
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_cont_clip'):
    D_cont_clip = _libs['grass_display.6.4.2RC2'].D_cont_clip
    D_cont_clip.restype = c_int
    D_cont_clip.argtypes = [c_double, c_double]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 57
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_polydots_clip'):
    D_polydots_clip = _libs['grass_display.6.4.2RC2'].D_polydots_clip
    D_polydots_clip.restype = None
    D_polydots_clip.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\display.h: 58
if hasattr(_libs['grass_display.6.4.2RC2'], 'D_polyline_cull'):
    D_polyline_cull = _libs['grass_display.6.4.2RC2'].D_polyline_cull
    D_polyline_cull.restype = None
    D_polyline_cull.argtypes = [POINTER(c_double), POINTER(c_double), c_int]
